--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
-REACT_APP_APIKEY=
-REACT_APP_AUTHDOMAIN=
-REACT_APP_PROJECTID=
-REACT_APP_STORAGEBUCKET=
-REACT_APP_MESSAGINGSENDERID=
-REACT_APP_APPID=
-REACT_APP_MEASUREMENTID=
+NEXT_PUBLIC_USER_ID=
+NEXT_PUBLIC_SERVICE_ID=
+NEXT_PUBLIC_TEMPLATE_ID=
+NEXT_PUBLIC_APIKEY=
+NEXT_PUBLIC_AUTHDOMAIN=
+NEXT_PUBLIC_PROJECTID=
+NEXT_PUBLIC_STORAGEBUCKET=
+NEXT_PUBLIC_MESSAGINGSENDERID=
+NEXT_PUBLIC_APPID=
+NEXT_PUBLIC_MEASUREMENTID=
+NEXT_PUBLIC_TRACKING_ID=
